# freethecows

./: .gitignore  README.md  audio_transcription.ipynb  get_files.py  transcribe.ipynb
transcription/: README.md  audio_transcription.ipynb  get_files.py  pyproject.toml
